--- a/Barracks/admin/ui/cocker/admin.less
+++ b/Barracks/admin/ui/cocker/admin.less
@@ -337,6 +337,8 @@ a{
 		position: absolute;
 		width:200px;left: 0px;top:130px;
 		padding-bottom:50px;
+		z-index:2000;
+
 		.ax-aside-menu-box{
 			position: absolute;
 			left: 0px;top:-53px;
@@ -684,9 +686,12 @@ a{
 		}
 		.ax-body{
 			.ax-title{
+				h1{
+					margin-left:40px;
+				}
 				.expand{
 					h1 {
-						margin-left:0px;
+						margin-left:40px;
 					}
 				}
 			}
@@ -695,7 +700,7 @@ a{
 			}
 		}
 		.ax-aside{
-			display: none;
+
 		}
 	}
 
