--- a/Barracks/admin/ui/cocker/admin.less
+++ b/Barracks/admin/ui/cocker/admin.less
@@ -524,6 +524,7 @@ a{
 	}
 }
 
+
 // 반응형 폼 서식
 .ax-rwd-table {
 	position: relative;
@@ -547,7 +548,7 @@ a{
 			position: relative;
 			.item-lable {
 				position: relative;
-				display: table-cell;
+				display: table-row;
 				*display: block;
 				*float: left;
 				span.th {
@@ -555,11 +556,13 @@ a{
 					*display: block;
 					*float: left;
 					color: #616161;
+					border-left: @border-b;
 					border-right: @border-b;
 					min-height: 20px;
 					line-height: 20px;
 					padding: 10px 0px;
-					box-sizing: content-box;
+					box-sizing: border-box;
+					min-width:100px;
 				}
 				span.th.none {
 					border: 0px none;
@@ -599,14 +602,41 @@ a{
 					}
 				}
 			}
-			&.secondItem {
+
+			&:first-child, &.first-child{
 				.item-lable {
 					span.th {
-						border-left: @border-b
+						border-left: none;
 					}
-				;
 				}
 			}
+
+			&.fullWidth{
+				position: relative;
+				display: table;
+				float:none;
+				clear:both;
+				width:100%;
+				.item-lable {
+					position: relative;
+					display: table-row;
+					float: none;
+					clear:both;
+					width:100%;
+					span.th{
+						width:100px;
+					}
+					span.td{
+
+					}
+					input[type=text], input[type=password], .AXInput, select, textarea{
+						width:100%;height:25px;
+						box-sizing: border-box;
+					}
+				}
+
+			}
+
 			&.rightPadding0 {
 				.item-lable {
 					span.td {
