--- a/theme/Barracks-cacao/admin/ui/cacao/admin.less
+++ b/theme/Barracks-cacao/admin/ui/cacao/admin.less
@@ -616,7 +616,7 @@ a{
 			padding: 0px;
 			text-align: center;
 			position: relative;
-			.item-lable {
+			.item-lable, .item-label {
 				position: relative;
 				display: table-row;
 				*display: block;
@@ -674,7 +674,7 @@ a{
 			}
 
 			&:first-child, &.first-child{
-				.item-lable {
+				.item-lable, .item-label {
 					span.th {
 						border-left: none;
 					}
@@ -687,7 +687,7 @@ a{
 				float:none;
 				clear:both;
 				width:100%;
-				.item-lable {
+				.item-lable, .item-label {
 					position: relative;
 					display: table-row;
 					float: none;
@@ -708,21 +708,21 @@ a{
 			}
 
 			&.rightPadding0 {
-				.item-lable {
+				.item-lable, .item-label {
 					span.td {
 						padding-right: 0px;
 					}
 				}
 			}
 			&.leftPadding0 {
-				.item-lable {
+				.item-lable, .item-label {
 					span.td {
 						padding-left: 0px;
 					}
 				}
 			}
 			&.padding0 {
-				.item-lable {
+				.item-lable, .item-label {
 					span.td {
 						padding: 5px 0px
 					}
@@ -1002,7 +1002,7 @@ a{
 				padding:0px;
 				text-align:left;
 				position:relative;
-				.item-lable{
+				.item-lable, .item-label{
 					position:relative;
 					display:block;float:left;
 					span.th{
@@ -1032,22 +1032,22 @@ a{
 					}
 				}
 				&.secondItem{
-					.item-lable{
+					.item-lable, .item-label{
 						span.th{border-left:none};
 					}
 				}
 				&.rightPadding0{
-					.item-lable{
+					.item-lable, .item-label{
 						span.td{padding-right:0px;}
 					}
 				}
 				&.leftPadding0{
-					.item-lable{
+					.item-lable, .item-label{
 						span.td{padding-left:0px;}
 					}
 				}
 				&.padding0{
-					.item-lable{
+					.item-lable, .item-label{
 						span.td{padding:5px 0px}
 					}
 				}
