--- a/theme/Barracks/admin/ui/cocker/admin.css
+++ b/theme/Barracks/admin/ui/cocker/admin.css
@@ -775,13 +775,15 @@ a:hover {
   text-align: center;
   position: relative;
 }
-.ax-rwd-table .item-group .item .item-lable {
+.ax-rwd-table .item-group .item .item-lable,
+.ax-rwd-table .item-group .item .item-label {
   position: relative;
   display: table-row;
   *display: block;
   *float: left;
 }
-.ax-rwd-table .item-group .item .item-lable span.th {
+.ax-rwd-table .item-group .item .item-lable span.th,
+.ax-rwd-table .item-group .item .item-label span.th {
   display: table-cell;
   *display: block;
   *float: left;
@@ -794,10 +796,12 @@ a:hover {
   box-sizing: border-box;
   min-width: 100px;
 }
-.ax-rwd-table .item-group .item .item-lable span.th.none {
+.ax-rwd-table .item-group .item .item-lable span.th.none,
+.ax-rwd-table .item-group .item .item-label span.th.none {
   border: 0px none;
 }
-.ax-rwd-table .item-group .item .item-lable span.td {
+.ax-rwd-table .item-group .item .item-lable span.td,
+.ax-rwd-table .item-group .item .item-label span.td {
   display: table-cell;
   *display: block;
   *float: left;
@@ -808,31 +812,39 @@ a:hover {
   box-sizing: content-box;
   vertical-align: middle;
 }
-.ax-rwd-table .item-group .item .item-lable span.td.selectBox {
+.ax-rwd-table .item-group .item .item-lable span.td.selectBox,
+.ax-rwd-table .item-group .item .item-label span.td.selectBox {
   *padding-top: 7px;
   *height: 28px;
 }
-.ax-rwd-table .item-group .item .item-lable span.td.inputText {
+.ax-rwd-table .item-group .item .item-lable span.td.inputText,
+.ax-rwd-table .item-group .item .item-label span.td.inputText {
   *padding-top: 6px;
   *height: 29px;
 }
-.ax-rwd-table .item-group .item .item-lable span.td.button {
+.ax-rwd-table .item-group .item .item-lable span.td.button,
+.ax-rwd-table .item-group .item .item-label span.td.button {
   *padding-top: 6px;
   *height: 29px;
 }
-.ax-rwd-table .item-group .item .item-lable span.td select {
+.ax-rwd-table .item-group .item .item-lable span.td select,
+.ax-rwd-table .item-group .item .item-label span.td select {
   box-sizing: border-box;
   height: 25px;
   margin: 0px;
 }
-.ax-rwd-table .item-group .item .item-lable span.td input {
+.ax-rwd-table .item-group .item .item-lable span.td input,
+.ax-rwd-table .item-group .item .item-label span.td input {
   vertical-align: middle;
 }
-.ax-rwd-table .item-group .item .item-lable span.td label {
+.ax-rwd-table .item-group .item .item-lable span.td label,
+.ax-rwd-table .item-group .item .item-label span.td label {
   vertical-align: middle;
 }
 .ax-rwd-table .item-group .item:first-child .item-lable span.th,
-.ax-rwd-table .item-group .item.first-child .item-lable span.th {
+.ax-rwd-table .item-group .item.first-child .item-lable span.th,
+.ax-rwd-table .item-group .item:first-child .item-label span.th,
+.ax-rwd-table .item-group .item.first-child .item-label span.th {
   border-left: none;
 }
 .ax-rwd-table .item-group .item.fullWidth {
@@ -842,32 +854,42 @@ a:hover {
   clear: both;
   width: 100%;
 }
-.ax-rwd-table .item-group .item.fullWidth .item-lable {
+.ax-rwd-table .item-group .item.fullWidth .item-lable,
+.ax-rwd-table .item-group .item.fullWidth .item-label {
   position: relative;
   display: table-row;
   float: none;
   clear: both;
   width: 100%;
 }
-.ax-rwd-table .item-group .item.fullWidth .item-lable span.th {
+.ax-rwd-table .item-group .item.fullWidth .item-lable span.th,
+.ax-rwd-table .item-group .item.fullWidth .item-label span.th {
   width: 100px;
 }
 .ax-rwd-table .item-group .item.fullWidth .item-lable input[type=text],
+.ax-rwd-table .item-group .item.fullWidth .item-label input[type=text],
 .ax-rwd-table .item-group .item.fullWidth .item-lable input[type=password],
+.ax-rwd-table .item-group .item.fullWidth .item-label input[type=password],
 .ax-rwd-table .item-group .item.fullWidth .item-lable .AXInput,
+.ax-rwd-table .item-group .item.fullWidth .item-label .AXInput,
 .ax-rwd-table .item-group .item.fullWidth .item-lable select,
-.ax-rwd-table .item-group .item.fullWidth .item-lable textarea {
+.ax-rwd-table .item-group .item.fullWidth .item-label select,
+.ax-rwd-table .item-group .item.fullWidth .item-lable textarea,
+.ax-rwd-table .item-group .item.fullWidth .item-label textarea {
   width: 100%;
   height: 25px;
   box-sizing: border-box;
 }
-.ax-rwd-table .item-group .item.rightPadding0 .item-lable span.td {
+.ax-rwd-table .item-group .item.rightPadding0 .item-lable span.td,
+.ax-rwd-table .item-group .item.rightPadding0 .item-label span.td {
   padding-right: 0px;
 }
-.ax-rwd-table .item-group .item.leftPadding0 .item-lable span.td {
+.ax-rwd-table .item-group .item.leftPadding0 .item-lable span.td,
+.ax-rwd-table .item-group .item.leftPadding0 .item-label span.td {
   padding-left: 0px;
 }
-.ax-rwd-table .item-group .item.padding0 .item-lable span.td {
+.ax-rwd-table .item-group .item.padding0 .item-lable span.td,
+.ax-rwd-table .item-group .item.padding0 .item-label span.td {
   padding: 5px 0px;
 }
 .ax-rwd-table .item-group .group-clear {
@@ -1126,12 +1148,14 @@ a:hover {
     text-align: left;
     position: relative;
   }
-  .ax-rwd-table .item-group .item .item-lable {
+  .ax-rwd-table .item-group .item .item-lable,
+  .ax-rwd-table .item-group .item .item-label {
     position: relative;
     display: block;
     float: left;
   }
-  .ax-rwd-table .item-group .item .item-lable span.th {
+  .ax-rwd-table .item-group .item .item-lable span.th,
+  .ax-rwd-table .item-group .item .item-label span.th {
     display: block;
     float: none;
     color: #616161;
@@ -1142,7 +1166,8 @@ a:hover {
     text-align: left;
     font-weight: bold;
   }
-  .ax-rwd-table .item-group .item .item-lable span.td {
+  .ax-rwd-table .item-group .item .item-lable span.td,
+  .ax-rwd-table .item-group .item .item-label span.td {
     display: block;
     float: none;
     height: auto;
@@ -1154,27 +1179,34 @@ a:hover {
     vertical-align: middle;
     text-align: left;
   }
-  .ax-rwd-table .item-group .item .item-lable span.td select {
+  .ax-rwd-table .item-group .item .item-lable span.td select,
+  .ax-rwd-table .item-group .item .item-label span.td select {
     box-sizing: border-box;
     height: 25px;
     margin: 0px;
   }
-  .ax-rwd-table .item-group .item .item-lable span.td input {
+  .ax-rwd-table .item-group .item .item-lable span.td input,
+  .ax-rwd-table .item-group .item .item-label span.td input {
     vertical-align: middle;
   }
-  .ax-rwd-table .item-group .item .item-lable span.td label {
+  .ax-rwd-table .item-group .item .item-lable span.td label,
+  .ax-rwd-table .item-group .item .item-label span.td label {
     vertical-align: middle;
   }
-  .ax-rwd-table .item-group .item.secondItem .item-lable span.th {
+  .ax-rwd-table .item-group .item.secondItem .item-lable span.th,
+  .ax-rwd-table .item-group .item.secondItem .item-label span.th {
     border-left: none;
   }
-  .ax-rwd-table .item-group .item.rightPadding0 .item-lable span.td {
+  .ax-rwd-table .item-group .item.rightPadding0 .item-lable span.td,
+  .ax-rwd-table .item-group .item.rightPadding0 .item-label span.td {
     padding-right: 0px;
   }
-  .ax-rwd-table .item-group .item.leftPadding0 .item-lable span.td {
+  .ax-rwd-table .item-group .item.leftPadding0 .item-lable span.td,
+  .ax-rwd-table .item-group .item.leftPadding0 .item-label span.td {
     padding-left: 0px;
   }
-  .ax-rwd-table .item-group .item.padding0 .item-lable span.td {
+  .ax-rwd-table .item-group .item.padding0 .item-lable span.td,
+  .ax-rwd-table .item-group .item.padding0 .item-label span.td {
     padding: 5px 0px;
   }
   .ax-rwd-table .item-group .item-clear {
