--- a/theme/Barracks/admin/ui/cocker/admin.less
+++ b/theme/Barracks/admin/ui/cocker/admin.less
@@ -546,7 +546,7 @@ a{
 			padding: 0px;
 			text-align: center;
 			position: relative;
-			.item-lable {
+			.item-lable, .item-label {
 				position: relative;
 				display: table-row;
 				*display: block;
@@ -604,7 +604,7 @@ a{
 			}
 
 			&:first-child, &.first-child{
-				.item-lable {
+				.item-lable, .item-label {
 					span.th {
 						border-left: none;
 					}
@@ -617,7 +617,7 @@ a{
 				float:none;
 				clear:both;
 				width:100%;
-				.item-lable {
+				.item-lable, .item-label {
 					position: relative;
 					display: table-row;
 					float: none;
@@ -638,21 +638,21 @@ a{
 			}
 
 			&.rightPadding0 {
-				.item-lable {
+				.item-lable, .item-label {
 					span.td {
 						padding-right: 0px;
 					}
 				}
 			}
 			&.leftPadding0 {
-				.item-lable {
+				.item-lable, .item-label {
 					span.td {
 						padding-left: 0px;
 					}
 				}
 			}
 			&.padding0 {
-				.item-lable {
+				.item-lable, .item-label {
 					span.td {
 						padding: 5px 0px
 					}
@@ -869,7 +869,7 @@ a{
 				padding:0px;
 				text-align:left;
 				position:relative;
-				.item-lable{
+				.item-lable, .item-label{
 					position:relative;
 					display:block;float:left;
 					span.th{
@@ -899,22 +899,22 @@ a{
 					}
 				}
 				&.secondItem{
-					.item-lable{
+					.item-lable, .item-label{
 						span.th{border-left:none};
 					}
 				}
 				&.rightPadding0{
-					.item-lable{
+					.item-lable, .item-label{
 						span.td{padding-right:0px;}
 					}
 				}
 				&.leftPadding0{
-					.item-lable{
+					.item-lable, .item-label{
 						span.td{padding-left:0px;}
 					}
 				}
 				&.padding0{
-					.item-lable{
+					.item-lable, .item-label{
 						span.td{padding:5px 0px}
 					}
 				}
