--- a/theme/Barracks/admin/ui/cocker/admin.less
+++ b/theme/Barracks/admin/ui/cocker/admin.less
@@ -1,5 +1,7 @@
 @import "../AXUtils";
 
+@import url(//cdn.jsdelivr.net/font-nanum/1.0/nanumbarungothic/nanumbarungothic.css);
+
 // Global Preset //////////////////
 @color		:#a6a6a6; 		//Light Gray
 @color-a	:#444;			//Dark Gray
