--- a/theme/Barracks/admin/ui/cocker/admin.less
+++ b/theme/Barracks/admin/ui/cocker/admin.less
@@ -1,3 +1,5 @@
+// barracks-cocker v0.1
+
 @import "../AXUtils";
 
 @import url(//cdn.jsdelivr.net/font-nanum/1.0/nanumbarungothic/nanumbarungothic.css);
@@ -40,6 +42,7 @@
 .ax-align-left{text-align: left;}
 .ax-align-center{text-align: center;}
 .ax-align-right{text-align: right;}
+
 html, body	{
 	background: @bgcolor-a; color:@color; height:100%; margin:0px; padding:0px;-webkit-text-size-adjust:none;
 	font-family	:"Nanum Barun Gothic", "Apple SD Gothic Neo", "Open sans", "Meiryo";
@@ -733,6 +736,54 @@ a{
 	}
 }
 
+
+// 공통 클래스 적합 대상들
+table.ax-layout{
+	border-collapse:collapse;
+	border:0px none;
+	width:100%;table-layout:fixed;
+	td, th{
+		padding:0px;
+		.tdRel{position: relative;}
+	}
+	tbody{
+		td, th{
+			min-height:25px;overflow:visible;
+			border:0px none;
+		}
+		tr{
+			&.gray{th,td{background-color:#F5F5F5;}}
+			&.red{th,td{background-color:#FFE8E8;}}
+			&.green{th,td{background-color:#F7FDEA;}}
+			&.blue{th,td{background-color:#EAF5FD;}}
+			&.yellow{th,td{background-color:#FEFEE9;}}
+			td{
+				&.gray{background-color:#F5F5F5;}
+				&.red{background-color:#FFE8E8;}
+				&.green{background-color:#F7FDEA;}
+				&.blue{background-color:#EAF5FD;}
+				&.yellow{background-color:#FEFEE9;}
+			}
+		}
+	}
+	&.padding10{
+		border-spacing: 10px;
+		border-collapse: separate;
+	}
+	&.padding5{
+		border-spacing: 5px;
+		border-collapse: separate;
+	}
+	&.padding15{
+		border-spacing: 15px;
+		border-collapse: separate;
+	}
+	&.padding20{
+		border-spacing: 20px;
+		border-collapse: separate;
+	}
+}
+
 @media @wide {
 }
 
@@ -796,6 +847,14 @@ a{
 		.ax-aside{
 			height:0px;
 			padding-bottom: 0px;
+
+			.ax-aside-box{
+				background: #fff;
+				padding: 10px 0px;
+				border: @border;
+				border-radius: 5px;
+				.util-drop-shadow();
+			}
 		}
 	}
 
@@ -922,6 +981,11 @@ a{
 				.ax-aside-menu-box{
 					display:none;
 				}
+			}
+			.ax-aside-box{
+				background: #fff;
+				padding: 10px;
+				border-bottom: @border;
 			}
 		}
 
