--- a/theme/Barracks-2/admin/ui/custom.less
+++ b/theme/Barracks-2/admin/ui/custom.less
@@ -9,6 +9,16 @@
 		.nowrap();
 	}
 }
+.AXFormTable{
+	td{
+		padding: 5px;
+		line-height: 20px;
+		//.nowrap();
+	}
+}
+.AXInputLabel{
+	span{line-height:1.5em;margin: 5px;}
+}
 
 #AXPage {
 	&.login {
