--- a/theme/Barracks-2/admin/ui/cocker/admin.less
+++ b/theme/Barracks-2/admin/ui/cocker/admin.less
@@ -346,8 +346,8 @@ a{
 				.right{float: right;}
 			}
 			/* 페이지 그리드 */
-			.ax-grid{
-				margin: 10px;
+			.ax-grid, .ax-tree, .ax-form, .ax-section{
+				margin: 10px;padding:0px;
 			}
 
 		}
@@ -981,7 +981,7 @@ table.ax-layout{
 					margin: 10px 3px;
 				}
 				/* 페이지 그리드 */
-				.ax-grid {
+				.ax-grid, .ax-tree, .ax-form, .ax-section {
 					margin: 10px 3px 3px 3px;
 				}
 			}
