--- a/theme/Barracks-2/admin/ui/cacao/admin.css
+++ b/theme/Barracks-2/admin/ui/cacao/admin.css
@@ -1,4 +1,8 @@
 @import url(//cdn.jsdelivr.net/font-nanum/1.0/nanumbarungothic/nanumbarungothic.css);
+/*
+ * barracks-cacao v0.2
+ * 2014.12.26 tom : mobile > ax-scroll-top 추가
+ */
 .none {
   display: none;
 }
@@ -1220,6 +1224,10 @@ table.ax-layout.padding20 {
   #AXPage div[class*="mx-"] {
     display: block;
   }
+  #AXPage .ax-header {
+    position: absolute;
+    opacity: 1;
+  }
   #AXPage .ax-header .ax-col-8 {
     width: 50%;
   }
@@ -1389,6 +1397,25 @@ table.ax-layout.padding20 {
   }
   #AXPage .ax-modal-footer .ax-unit.right {
     text-align: right;
+  }
+  .ax-scroll-top {
+    position: fixed;
+    z-index: 2;
+    top: 0px;
+    left: 0px;
+    width: 100%;
+  }
+  .ax-scroll-top a {
+    display: block;
+    background: #523636;
+    color: #fff;
+    padding: 7px 5px;
+    width: 70px;
+    margin: 0px auto;
+    text-align: center;
+    -webkit-border-radius: 0px 0px 10px 10px;
+    -moz-border-radius: 0px 0px 10px 10px;
+    border-radius: 0px 0px 10px 10px;
   }
 }
 @media (max-width: 500px) {
