--- a/theme/Barracks-2/admin/ui/cacao/admin.less
+++ b/theme/Barracks-2/admin/ui/cacao/admin.less
@@ -1,4 +1,8 @@
-// barracks-cacao v0.1
+/*
+ * barracks-cacao v0.2
+ * 2014.12.26 tom : mobile > ax-scroll-top 추가
+ */
+
 
 @import "../AXUtils";
 
@@ -886,7 +890,7 @@ table.ax-layout{
 
 @media @mobile {
 
-	#AXPage{
+  #AXPage{
 
 		.ax-wrap 	{margin:0px auto;}
 		.ax-clear	{clear:both;}
@@ -909,6 +913,8 @@ table.ax-layout{
 		div[class*="mx-"] {display:block;}
 
 		.ax-header{
+            position: absolute;
+          opacity: 1;
 			.ax-col-8{width:50%;}
 			.ax-col-4{width:50%;}			
 			.ax-logo{
@@ -1061,6 +1067,21 @@ table.ax-layout{
     }
 	}
 
+  .ax-scroll-top{
+    position:fixed;
+    z-index:2;
+    top:0px;
+    left:0px;width:100%;
+    a{
+      display: block;
+      background: @color-b;color:#fff;
+      padding: 7px 5px;
+      width: 70px;
+      margin:0px auto;
+      text-align: center;
+      .util-border-radius(0px,0px,10px,10px);
+    }
+  }
 }
 
 @media @formMobile {
