--- a/theme/Barracks-2/admin/ui/cocker/admin.css
+++ b/theme/Barracks-2/admin/ui/cocker/admin.css
@@ -1384,6 +1384,16 @@ table.ax-layout.padding20 {
     top: -60px;
     left: 0px;
     width: 100%;
+    /* For Safari 3.1 to 6.0 */
+    -webkit-transition-property: all;
+    -webkit-transition-duration: 0.5s;
+    -webkit-transition-timing-function: linear;
+    -webkit-transition-delay: 0.3s;
+    /* Standard syntax */
+    transition-property: all;
+    transition-duration: 0.5s;
+    transition-timing-function: linear;
+    transition-delay: 0.3s;
   }
   .ax-scroll-top.on {
     top: 0px;
